fix overflow css

--- a/aionbook_theme/css/course.css
+++ b/aionbook_theme/css/course.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 40px 0;
+    padding: 100px 100px;
     background-color: #f0f0f0;
 }
 
@@ -11,7 +11,7 @@
     width: 100%;
     max-width: 1200px;
     height: 500px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .carousel-inner {
@@ -21,7 +21,7 @@
 
 .card {
     flex: 0 0 360px;
-    height: 450px;
+    height: 500px;
     margin: 0 20px;
     background-color: white;
     border-radius: 10px;
